# schedule-calculator

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: build.yml  pylint.yml
schedule_calculator/: __main__.py  cli.py  clock.py  presenter.py  schedule.py  schedule_journal.py  time_assembler.py  time_entry_repository.py  workday_calculator.py
schedule_calculator/assemblers/: schedule_assembler.py  workday_assembler.py
schedule_calculator/calculus/: workday_calculator.py
schedule_calculator/calculus/exceptions/: unknown_operation_day.py
schedule_calculator/calculus/operations/: continuous_schedule_day.py  free_day.py  interface.py  schedule.py  short_day.py  usual_day.py  weekend_day.py
schedule_calculator/configuration/: conf.yml
schedule_calculator/time/: clock.py  date_period.py  schedule.py  work_calendar.py  workcalendar.py  workday.py
scripts/linux/: install.sh  run-lint.sh  run-pylint.sh  run-pytest.sh  schedule-calculator-profile.sh  setup.sh
scripts/windows/: run-lint.ps1  run-pylint.bat  run-pylint.ps1  run-pytest.bat  run-pytest.ps1  schedule-calculator-profile.ps1  setup.ps1
tests/: clock_test.py  presenter_test.py  schedule_journal_test.py  time_assembler_test.py  time_entry_repository_test.py  workday_calculator_test.py
tests/assemblers/: schedule_assembler_test.py  time_assembler_test.py  workday_assembler_test.py
tests/calculus/: workday_calculator_test.py
tests/fakes/: clock_fake.py  presenter_fake.py  time_entry_repository_fake.py
tests/time/: clock_test.py  workday.py  workday_test.py
(+21 files in other folders)
